# RISC

./: .gitignore
contracts/: .gitignore
contracts/src/: ZKAirdrop.sol
contracts/src/interfaces/: IRiscZeroVerifier.sol
contracts/test/: ZKAirdrop.t.sol
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs  merkle.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
